tests/invalid/type/clone_override_return_contravariant.pts
prototype A {
  function clone() : A {
    return super.clone();
  }
}

prototype B : A {
  function clone() : Object {
    return super.clone();
  }
}
